# cle-tp3

./: CMakeLists.txt  README.md  aircond.cpp
docs/: README.org~
sc_minilib/examples/: CMakeLists.txt
sc_minilib/examples/coffee/: coffee.cpp  coffee.org
sc_minilib/examples/fan/: CMakeLists.txt
sc_minilib/examples/hierarchy/: CMakeLists.txt
sc_minilib/examples/qt/fan/: fan.old  fan.pro~  fan_window.cpp~
sc_minilib/srcs/: display.h  ptime.cpp  sm_defs.cpp  sm_defs.h  state_chart.cpp  timeout.cpp  timeout.h
tp-3-air-cond-main/: .gitignore  .gitmodules
tp-3-air-cond-main/docs/: README.org
tp-3-air-cond-main/sc_minilib/sc_minilib-main/: CMakeLists.txt  README.md
tp-3-air-cond-main/sc_minilib/sc_minilib-main/examples/coffee/: CMakeLists.txt
tp-3-air-cond-main/sc_minilib/sc_minilib-main/examples/fan/: fan.cpp
tp-3-air-cond-main/sc_minilib/sc_minilib-main/examples/hierarchy/: hierarchy.cpp  hierarchy.org
tp-3-air-cond-main/sc_minilib/sc_minilib-main/examples/qt/fan/: Makefile  fan.cpp  fan.hpp
tp-3-air-cond-main/sc_minilib/sc_minilib-main/srcs/: CMakeLists.txt  display.cpp  ptime.h  state_chart.hpp  transition.cpp  transition.hpp
tp-3-air-cond-main/sc_minilib/sc_minilib-main/test/: CMakeLists.txt  test_sc.cpp
